# openapi-tips

./: README.md
app/: pyproject.toml
app/app/: chain87.py  chat_simple.py  st-old.py  st.py
