[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["icck <icck.n.n1111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.5"
langchain = "^0.0.340"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
streamlit = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
